fix: spacing, header sticky

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  min-width: 1000px;
+}
+
 img {
   max-width: 100%;
 }
@@ -53,6 +57,13 @@ a {
   width: calc(100% / 3);
 }
 /* HEADER */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  box-shadow: 0px 0px 10px 0px grey;
+}
+
 .header-content {
   min-height: var(--header-height);
   /* line-height: var(--header-height); */
@@ -75,32 +86,37 @@ nav li {
   padding: 0 var(--space-basis);
 }
 
+nav li:hover {
+  text-decoration: underline;
+}
+
 /* JUMBO */
 .jumbo .container,
 .footer .container {
   max-width: 1200px;
-  margin-top: 100px;
 }
 
-header {
-  min-height: 775px;
+.jumbo {
+  max-height: 650px;
   background-color: rgb(180, 208, 231);
 }
 
 .jumbo h1 {
-  font-size: 4rem;
-  font-weight: 900;
+  font-size: 5rem;
+  font-weight: 800;
+  min-width: 1200px;
 }
 
 .jumbo-columns {
   display: flex;
-  min-height: 500px;
+  max-height: 400px;
+  min-width: 1200px;
 }
 
 .jumbo-small-column {
   padding-top: 30px;
   width: 30%;
-
+  margin-bottom: 10px;
   /* debug */
   /* background-color: antiquewhite; */
 }
@@ -174,7 +190,7 @@ input[type="radio"] {
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 23px;
-  height: 1000px;
+  min-height: 1000px;
 
   /* debug */
   /* background-color: antiquewhite; */
@@ -281,10 +297,14 @@ input[type="radio"] {
 /* partner dropbox */
 
 .partner {
-  margin-top: 500px;
+  width: 100%;
+  margin-top: 100px;
   margin-bottom: 100px;
-  min-height: 500px;
+  max-height: 500px;
   /* background-color: antiquewhite; */
+}
+
+.partner-container {
   display: flex;
 }
 
@@ -493,6 +513,10 @@ input[type="radio"] {
   background-color: #000000;
   color: white;
   padding-top: 50px;
+}
+
+.footer .container {
+  margin-top: 100px;
 }
 
 .footer-columns {
